--- a/payments-lib/pom.xml
+++ b/payments-lib/pom.xml
@@ -9,7 +9,7 @@
     </parent>
     <groupId>net.reappay.pg.payments</groupId>
     <artifactId>payments-lib</artifactId>
-    <version>0.0.2-SNAPSHOT</version>
+    <version>1.0.0</version>
     <name>reappaypg-payments-lib</name>
     <description>Demo project for Spring Boot</description>
     <packaging>jar</packaging>
