--- a/pom.xml
+++ b/pom.xml
@@ -13,7 +13,7 @@
     <artifactId>reappaypg-payments</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>reappaypg-payments</name>
-    <description>Demo project for Spring Boot</description>
+    <description>Spring Boot</description>
     <properties>
         <java.version>11</java.version>
     </properties>
