--- a/payments-back/pom.xml
+++ b/payments-back/pom.xml
@@ -65,6 +65,11 @@
             <groupId>org.springframework</groupId>
             <artifactId>spring-web</artifactId>
         </dependency>
+        <dependency>
+            <groupId>net.devh</groupId>
+            <artifactId>grpc-server-spring-boot-autoconfigure</artifactId>
+            <version>2.12.0.RELEASE</version>
+        </dependency>
     </dependencies>
 
     <build>
